# scipy-optimstruct

./: .gitignore  .travis.yml  MANIFEST  README.md  Sample.ipynb  requirements.txt  sample.ipynb  sample.py  setup.cfg  setup.py
examples/: sample.py
src/scipy_optimstruct/: __init__.py  optimstruct.py
tests/: test_optimstruct.py
