[metadata]
description_file = README.md
name = scipy-optimstruct
version = 0.1.3
author = Andrew Yu
author_email = andrewthomasyu@gmail.com
url = https://github.com/andrewnyu/scipy-optimstruct
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
